ADC1通道的数据通过DMA进行数据复制

--- a/11-DMA/demo.uvprojx
+++ b/11-DMA/demo.uvprojx
@@ -588,12 +588,7 @@
             <File>
               <FileName>MyDMA.c</FileName>
               <FileType>1</FileType>
-              <FilePath>.\MyDMA.c</FilePath>
-            </File>
-            <File>
-              <FileName>ILI93xx.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>.\Hardware\LCD\ILI93xx.c</FilePath>
+              <FilePath>.\Hardware\DMA\MyDMA.c</FilePath>
             </File>
           </Files>
         </Group>
